--- a/adsense-fe/package.json
+++ b/adsense-fe/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^1.3.0",
+    "@thirdweb-dev/react": "^4.1.12",
     "next": "14.0.4",
+    "pino-pretty": "^10.2.3",
     "react": "^18",
     "react-dom": "^18",
     "wagmi": "^1.4.10"
