--- a/adsense-fe/package.json
+++ b/adsense-fe/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@airstack/airstack-react": "^0.6.1",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@thirdweb-dev/react": "^4.1.12",
     "next": "14.0.4",
