--- a/adsense-fe/package.json
+++ b/adsense-fe/package.json
@@ -12,6 +12,7 @@
     "@airstack/airstack-react": "^0.6.1",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@thirdweb-dev/react": "^4.1.12",
+    "@xmtp/xmtp-js": "^11.2.3",
     "next": "14.0.4",
     "pino-pretty": "^10.2.3",
     "react": "^18",
