--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "hardhat": "^2.19.2"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.9.5"
+    "@openzeppelin/contracts": "^4.9.5",
+    "dotenv": "^16.3.1"
   }
 }
