--- a/adsense-fe/package.json
+++ b/adsense-fe/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@airstack/airstack-react": "^0.6.1",
+    "@nextui-org/react": "^2.2.9",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@thirdweb-dev/react": "^4.1.12",
     "@xmtp/xmtp-js": "^11.2.3",
+    "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "pino-pretty": "^10.2.3",
     "react": "^18",
