--- a/adsense-fe/package.json
+++ b/adsense-fe/package.json
@@ -24,6 +24,7 @@
     "wagmi": "^1.4.10"
   },
   "devDependencies": {
+    "@graphprotocol/client-cli": "^3.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
