--- a/adsense-fe/package.json
+++ b/adsense-fe/package.json
@@ -15,10 +15,12 @@
     "@thirdweb-dev/react": "^4.1.12",
     "@xmtp/xmtp-js": "^11.2.3",
     "framer-motion": "^10.16.16",
+    "lucide-react": "^0.294.0",
     "next": "14.0.4",
     "pino-pretty": "^10.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.20.1",
     "wagmi": "^1.4.10"
   },
   "devDependencies": {
