--- a/adsense-fe/package.json
+++ b/adsense-fe/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@airstack/airstack-react": "^0.6.1",
     "@nextui-org/react": "^2.2.9",
+    "@pushprotocol/restapi": "^1.4.45",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@thirdweb-dev/react": "^4.1.12",
     "@xmtp/xmtp-js": "^11.2.3",
+    "ethers": "^5.7.2",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
